--- a/LightBeacon/LightBeacon/LBARightVC.xib
+++ b/LightBeacon/LightBeacon/LBARightVC.xib
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LBARightVC">
             <connections>
-                <outlet property="view" destination="iN0-l3-epB" id="qBO-l7-kjQ"/>
+                <outlet property="currentColorSwatch" destination="2yi-Vk-Znp" id="RPM-OP-IaN"/>
+                <outlet property="doneButton" destination="HaI-D9-zze" id="q3p-9y-Teb"/>
+                <outlet property="editButton" destination="BCQ-fk-xjO" id="BHo-Zh-Fdf"/>
+                <outlet property="tableview" destination="1hC-Bm-C3j" id="14O-h0-haJ"/>
+                <outlet property="view" destination="iN0-l3-epB" id="g9n-Yh-43v"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -25,12 +30,43 @@
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     </textAttributes>
                     <items>
-                        <navigationItem title="Favorites" id="va6-jh-Mah">
+                        <navigationItem id="va6-jh-Mah">
                             <barButtonItem key="leftBarButtonItem" title="Close" id="PC8-Pa-nHo">
-                                <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <action selector="closeButtonTapped:" destination="-1" id="dwh-je-B9z"/>
                                 </connections>
+                            </barButtonItem>
+                            <barButtonItem key="rightBarButtonItem" style="plain" id="sXC-KI-LyR">
+                                <view key="customView" contentMode="scaleToFill" id="ZfY-D1-C8U">
+                                    <rect key="frame" x="0.0" y="0.0" width="133" height="33"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BCQ-fk-xjO">
+                                            <rect key="frame" x="7" y="2" width="54" height="33"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <inset key="contentEdgeInsets" minX="0.0" minY="-2" maxX="0.0" maxY="0.0"/>
+                                            <state key="normal" title="     Edit">
+                                                <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="editButtonTapped:" destination="-1" eventType="touchUpInside" id="a9D-oq-8C9"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HaI-D9-zze">
+                                            <rect key="frame" x="87" y="2" width="46" height="30"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <state key="normal" title="Done">
+                                                <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="doneButtonTapped:" destination="-1" eventType="touchUpInside" id="7WK-3Y-Io8"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
                             </barButtonItem>
                         </navigationItem>
                     </items>
@@ -40,22 +76,102 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </navigationBar>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XYg-kM-q00">
+                    <rect key="frame" x="0.0" y="56" width="600" height="50"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wSE-Xs-BeB">
+                            <rect key="frame" x="0.0" y="0.0" width="600" height="52"/>
+                            <subviews>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2yi-Vk-Znp">
+                                    <rect key="frame" x="8" y="8" width="36" height="36"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" secondItem="2yi-Vk-Znp" secondAttribute="height" multiplier="1:1" id="bgc-Yi-i1M"/>
+                                    </constraints>
+                                </view>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dtE-Ks-hTh" customClass="LBASettingsBoxView">
+                                    <rect key="frame" x="52" y="8" width="152" height="36"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add to Favorites?" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wAg-yI-Mbn">
+                                            <rect key="frame" x="8" y="0.0" width="136" height="36"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yDo-on-Y8n">
+                                            <rect key="frame" x="0.0" y="0.0" width="152" height="36"/>
+                                            <state key="normal">
+                                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="addToFavsButtonTapped:" destination="-1" eventType="touchUpInside" id="2Gc-cs-jdM"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="yDo-on-Y8n" secondAttribute="bottom" id="2FM-uM-uVH"/>
+                                        <constraint firstAttribute="trailing" secondItem="wAg-yI-Mbn" secondAttribute="trailing" constant="8" id="38s-4U-Xk2"/>
+                                        <constraint firstAttribute="trailing" secondItem="yDo-on-Y8n" secondAttribute="trailing" id="53g-jS-300"/>
+                                        <constraint firstItem="wAg-yI-Mbn" firstAttribute="leading" secondItem="dtE-Ks-hTh" secondAttribute="leading" constant="8" id="9HA-IY-sNn"/>
+                                        <constraint firstAttribute="width" constant="212" id="XDw-Yl-CHZ"/>
+                                        <constraint firstItem="wAg-yI-Mbn" firstAttribute="top" secondItem="dtE-Ks-hTh" secondAttribute="top" id="aaT-Vb-Twx"/>
+                                        <constraint firstItem="yDo-on-Y8n" firstAttribute="top" secondItem="dtE-Ks-hTh" secondAttribute="top" id="gam-qr-GPT"/>
+                                        <constraint firstAttribute="bottom" secondItem="wAg-yI-Mbn" secondAttribute="bottom" id="nCD-Ss-YY0"/>
+                                        <constraint firstItem="yDo-on-Y8n" firstAttribute="leading" secondItem="dtE-Ks-hTh" secondAttribute="leading" id="pga-0I-rhD"/>
+                                    </constraints>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="XDw-Yl-CHZ"/>
+                                        </mask>
+                                    </variation>
+                                </view>
+                            </subviews>
+                            <color key="backgroundColor" red="0.15686274509803921" green="0.15686274509803921" blue="0.15686274509803921" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="bottom" secondItem="2yi-Vk-Znp" secondAttribute="bottom" constant="8" id="5UO-vT-6ch"/>
+                                <constraint firstItem="2yi-Vk-Znp" firstAttribute="leading" secondItem="wSE-Xs-BeB" secondAttribute="leading" constant="8" id="NBN-E3-hSn"/>
+                                <constraint firstAttribute="bottom" secondItem="dtE-Ks-hTh" secondAttribute="bottom" constant="8" id="Q2a-NW-oCr"/>
+                                <constraint firstItem="dtE-Ks-hTh" firstAttribute="top" secondItem="wSE-Xs-BeB" secondAttribute="top" constant="8" id="Rir-PN-U6D"/>
+                                <constraint firstItem="2yi-Vk-Znp" firstAttribute="top" secondItem="wSE-Xs-BeB" secondAttribute="top" constant="8" id="t1X-bn-hgN"/>
+                                <constraint firstItem="dtE-Ks-hTh" firstAttribute="leading" secondItem="2yi-Vk-Znp" secondAttribute="trailing" constant="8" id="tvQ-UD-PsK"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" red="0.047058823529411764" green="0.047058823529411764" blue="0.047058823529411764" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstItem="wSE-Xs-BeB" firstAttribute="leading" secondItem="XYg-kM-q00" secondAttribute="leading" id="39k-2h-hw3"/>
+                        <constraint firstAttribute="bottom" secondItem="wSE-Xs-BeB" secondAttribute="bottom" constant="-2" id="4hg-Rf-qrh"/>
+                        <constraint firstItem="wSE-Xs-BeB" firstAttribute="top" secondItem="XYg-kM-q00" secondAttribute="top" id="Ego-1A-ead"/>
+                        <constraint firstAttribute="height" constant="50" id="EoR-AT-own"/>
+                        <constraint firstAttribute="trailing" secondItem="wSE-Xs-BeB" secondAttribute="trailing" id="nGB-Ae-zRe"/>
+                    </constraints>
+                </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="1hC-Bm-C3j">
-                    <rect key="frame" x="0.0" y="56" width="600" height="544"/>
-                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                    <color key="sectionIndexBackgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    <rect key="frame" x="0.0" y="106" width="600" height="494"/>
+                    <color key="backgroundColor" red="0.047058823529411764" green="0.047058823529411764" blue="0.047058823529411764" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="separatorColor" red="0.23529411764705882" green="0.23529411764705882" blue="0.23529411764705882" alpha="1" colorSpace="calibratedRGB"/>
+                    <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="49g-3C-pNf"/>
+                        <outlet property="delegate" destination="-1" id="2Pv-qm-Rbd"/>
+                    </connections>
                 </tableView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="1hC-Bm-C3j" firstAttribute="top" secondItem="rBA-lo-rSW" secondAttribute="bottom" id="2r4-fW-qej"/>
+                <constraint firstItem="1hC-Bm-C3j" firstAttribute="top" secondItem="XYg-kM-q00" secondAttribute="bottom" id="FG0-Ly-j2g"/>
                 <constraint firstAttribute="bottom" secondItem="1hC-Bm-C3j" secondAttribute="bottom" id="Imb-RJ-iEC"/>
+                <constraint firstAttribute="trailing" secondItem="XYg-kM-q00" secondAttribute="trailing" id="JeD-U1-0Sd"/>
                 <constraint firstAttribute="trailing" secondItem="1hC-Bm-C3j" secondAttribute="trailing" id="Qgc-yt-aY3"/>
+                <constraint firstItem="XYg-kM-q00" firstAttribute="top" secondItem="rBA-lo-rSW" secondAttribute="bottom" id="WjN-7g-Caz"/>
                 <constraint firstAttribute="trailing" secondItem="rBA-lo-rSW" secondAttribute="trailing" id="fTN-fc-JwT"/>
                 <constraint firstItem="rBA-lo-rSW" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="fh1-Dg-Roc"/>
                 <constraint firstItem="rBA-lo-rSW" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="12" id="g3K-s9-0xg"/>
+                <constraint firstItem="XYg-kM-q00" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="n0S-04-lt7"/>
                 <constraint firstItem="1hC-Bm-C3j" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="oO3-sU-8Hu"/>
             </constraints>
+            <point key="canvasLocation" x="207" y="353"/>
         </view>
     </objects>
 </document>
