--- a/LightBeacon/LightBeacon/LBACenterVC.xib
+++ b/LightBeacon/LightBeacon/LBACenterVC.xib
@@ -58,7 +58,7 @@
                     </constraints>
                     <items>
                         <navigationItem id="Lmy-q5-1gI">
-                            <barButtonItem key="leftBarButtonItem" style="plain" id="9oG-bn-7Oj">
+                            <barButtonItem key="leftBarButtonItem" id="9oG-bn-7Oj">
                                 <view key="customView" contentMode="scaleToFill" id="gyL-xf-0FF" customClass="LBASettingsTab">
                                     <rect key="frame" x="16" y="14" width="22" height="16"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -84,6 +84,7 @@
                                 </view>
                             </barButtonItem>
                             <barButtonItem key="rightBarButtonItem" tag="1" systemItem="add" id="ggD-CU-k1F">
+                                <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <action selector="favsButtonTapped:" destination="-1" id="v6c-O5-Haf"/>
                                 </connections>
